<resources>
    <string name="app_name">Presensi</string>

    <string name="login">Login</string>
    <string name="login_message">Masukan akun anda</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="version">Presensi V.2.0.0</string>
    <string name="email">email</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">name</string>
    <string name="about_apps">Tentang Aplikasi</string>
    <string name="bantuan">Bantuan</string>
    <string name="company_name">PT Puskomedia Indonesia Kreatif</string>
    <string name="check_in">check in</string>
    <string name="check_out">check out</string>
    <string name="dummy_day">Rabu</string>
    <string name="dummy_date">16 Oktober 2021</string>
    <string name="presensi_hadir">Presensi Hadir</string>
    <string name="presensi_pulang">Presensi Pulang</string>
    <string name="dummy_check_in">00:00</string>
    <string name="dummy_check_out">12:00</string>
    <string name="log_presensi">Log Presensi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_message_1">Selamat Anda</string>
    <string name="result_message_3">Kehadiran</string>
    <string name="result_message_2">Sudah Presensi</string>
    <string name="back">Kembali</string>
    <string name="dummy_about_app">Presensi Panda sebuah aplikasi terobosan baru dari Puskomedia, sebagai wujud komitmen menuju satu data yang terhubung dengan Panda Sistem Informasi Desa. Presensi Digital berbasis Android ini dikembangkan dengan teknologi Kecerdasan Buatan (Artificial Intelligence) untuk mempermudah dalam pelayanan dan hidup manusia yang lebih baik.</string>
    <string name="help_message">Kunjungi Sosial Media kami di:</string>
    <string name="web_help_1">www.panda.id</string>
    <string name="instagram">Teknologi Panda</string>
    <string name="facebook">PuskoMedia Indonesia</string>
    <string name="save">Simpan</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="change_password">Ubah Password</string>
    <string name="position">Jabatan</string>
    <string name="empty_attendance_log">Data Presensi Masih Kosong.</string>
    <string name="fetching_data">Sedang memeriksa data, mohon tunggu...</string>
    <string name="choose_server">Pilih Server</string>
    <string name="sipanda">PANDA</string>
    <string name="sidemit">Sidemit</string>
    <string name="simba">Simba</string>
    <string name="sinar">Sinar</string>
    <string name="close">Tutup</string>
    <string name="choose">Pilih</string>
    <string name="welcome">Selamat Datang</string>
    <string name="intro_message">Silahkan Pilih Server Terlebih dahulu</string>
    <string name="web_help_2">www.puskomedia.id</string>
</resources>